
jsdir = $(pkgdatadir)/js

nobase_dist_js_DATA = \
	misc/config.js		\
	misc/docInfo.js		\
	misc/fileUtils.js	\
	misc/format.js		\
	misc/gnomeSession.js	\
	misc/gridNavigator.js	\
	misc/history.js		\
	misc/modemManager.js	\
	misc/params.js		\
	misc/pointerTracker.js	\
	misc/screenSaver.js     \
	misc/util.js		\
	misc/windowUtils.js		\
	perf/core.js		\
	ui/altTab.js		\
	ui/applet.js		\
	ui/appletManager.js	\
	ui/appFavorites.js	\
	ui/automountManager.js  \
	ui/autorunManager.js    \
	ui/boxpointer.js	\
	ui/calendar.js		\
	ui/checkBox.js		\
	ui/radioButton.js	\
	ui/desklet.js		\
	ui/deskletManager.js	\
	ui/dnd.js		\
	ui/edgeFlip.js  	\
	ui/endSessionDialog.js	\
	ui/environment.js	\
	ui/expo.js		\
	ui/expoThumbnail.js	\
	ui/extension.js	\
	ui/extensionSystem.js	\
	ui/flashspot.js		\
	ui/hotCorner.js		\
	ui/keyboard.js		\
	ui/layout.js		\
	ui/lightbox.js		\
	ui/link.js		\
	ui/lookingGlass.js	\
	ui/magnifier.js		\
	ui/magnifierDBus.js	\
	ui/main.js		\
	ui/messageTray.js	\
	ui/modalDialog.js	\
	ui/networkAgent.js	\
	ui/cinnamonEntry.js	\
	ui/cinnamonMountOperation.js \
	ui/notificationDaemon.js \
	ui/overview.js		\
	ui/panel.js		\
	ui/panelMenu.js		\
	ui/placesManager.js  \
	ui/polkitAuthenticationAgent.js \
	ui/popupMenu.js		\
	ui/runDialog.js		\
	ui/scripting.js		\
	ui/search.js		\
	ui/settings.js		\
	ui/cinnamonDBus.js		\
	ui/statusIconDispatcher.js	\
	ui/themeManager.js	\
	ui/tooltips.js	\
	ui/tweener.js		\
	ui/windowAttentionHandler.js	\
	ui/windowManager.js	\
	ui/workspace.js		\
	ui/workspacesView.js	\
	ui/xdndHandler.js
