
jsdir = $(pkgdatadir)/js

nobase_dist_js_DATA = \
	misc/config.js		\
	misc/docInfo.js		\
	misc/fileDialog.js	\
	misc/fileUtils.js	\
	misc/gnomeSession.js	\
	misc/gridNavigator.js	\
	misc/history.js		\
	misc/interfaces.js \
	misc/modemManager.js	\
	misc/params.js		\
	misc/pointerTracker.js	\
	misc/screenSaver.js     \
	misc/signalManager.js     \
	misc/timers.js       \
	misc/util.js		\
	misc/windowUtils.js		\
	perf/core.js		\
    ui/accessibility.js \
	ui/appSwitcher/appSwitcher.js	\
	ui/appSwitcher/appSwitcher3D.js	\
	ui/appSwitcher/classicSwitcher.js	\
	ui/appSwitcher/coverflowSwitcher.js	\
	ui/appSwitcher/timelineSwitcher.js	\
	ui/applet.js		\
	ui/appletManager.js	\
	ui/searchProviderManager.js	\
	ui/appFavorites.js	\
	ui/backgroundManager.js    \
	ui/boxpointer.js	\
	ui/checkBox.js		\
	ui/radioButton.js	\
	ui/dbusMenu.js		\
	ui/indicatorManager.js	\
	ui/desklet.js		\
	ui/deskletManager.js	\
	ui/dnd.js		\
	ui/edgeFlip.js  	\
	ui/environment.js	\
	ui/expo.js		\
	ui/expoThumbnail.js	\
	ui/extension.js	\
	ui/extensionSystem.js	\
	ui/flashspot.js		\
	ui/hotCorner.js		\
	ui/keybindings.js   \
	ui/keyboard.js		\
	ui/layout.js		\
	ui/lightbox.js		\
	ui/lookingGlass.js	\
	ui/magnifier.js		\
	ui/magnifierDBus.js	\
	ui/main.js		\
	ui/messageTray.js	\
	ui/modalDialog.js	\
	ui/cinnamonEntry.js	\
	ui/cinnamonMountOperation.js \
	ui/osdWindow.js \
	ui/notificationDaemon.js \
	ui/overview.js		\
	ui/overrides.js \
	ui/panel.js		\
	ui/placesManager.js  \
	ui/popupMenu.js		\
	ui/runDialog.js		\
	ui/scripting.js		\
	ui/separator.js 	\
	ui/slider.js 		\
	ui/soundManager.js  \
	ui/search.js		\
	ui/settings.js		\
	ui/slideshowManager.js  \
	ui/systray.js       \
	ui/cinnamonDBus.js		\
	ui/statusIconDispatcher.js	\
	ui/themeManager.js	\
	ui/tooltips.js	\
	ui/tweener.js		\
	ui/windowAttentionHandler.js	\
	ui/windowManager.js	\
	ui/windowEffects.js	\
	ui/workspace.js		\
	ui/workspacesView.js	\
	ui/xdndHandler.js
